      no timeout.

    - "InstanceDependency", "ResourceDependency" and "DependencyMap" in
      "piped.dependencies" now has support for a timeout keyword argument to
      ".wait_for_resource()". If the resource is not available before the timeout
      is reached, a "piped.exceptions.TimeoutError" is raised.

    - encode-json now passes the `indent`-option to `json.dumps`.


New processors:
    - get-zookeeper-children: Get a list of children for a ZooKeeper node.
    - get-zookeeper-data: Get the data of a ZooKeeper node.
    - zookeeper-node-exists: Check whether a given ZooKeeper node exists.
    - set-zookeeper-data: Set the contents of a ZooKeeper node.
    - create-zookeeper-node: Create a ZooKeeper node.
    - web-client-get-page: Getting a web page.


Internal changes:
    - piped.processing now uses stores the processor name under the
        '__processor__' key instead of 'processor', enabling processors to
        take 'processor' as a keyword argument.

    - piped and contrib plugins no longer use namespace packages, but uses the
        same scheme as twisted for loading external plugins. This means that
        plugins (both processors and providers) are automatically found if they
        are available in a module or package under the folder "piped/plugins"
        anywhere on sys.path.

    - DummyRequest moved back from web_provider to test_web_provider as it uses
        code from the twisted test suite, which shouldn't be used in production.


Backward-incompatible changes:
    - The syntax for creating processors in the YAML configuration has changed.
        Using "processor: processor_name" is no longer supported. Use

            - processor_name

            OR

            - processor_name:
                foo: bar

            OR

            - __processor__: processor_name
              foo: bar

         instead.

    - The processors proxy-forward and chain-web-requests were removed because